# KAiScriptor

./: .gitignore  CLAUDE.md  README.md  RISK.md  pyproject.toml
docs/: ontography.md  overview.md
examples/: family_of_being.md
examples/python/: basic_lexicon_usage.py
kaiscriptor/: __init__.py  lexicon.py  ontography.py
specs/: kaiscriptor.md  scriptormemory.md
tests/: __init__.py  test_lexicon.py  test_ontography.py
