[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaiscriptor"
version = "0.1.0"
description = "Semantic Role Framing Toolkit for LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary - All Rights Reserved"}
authors = [
    {name = "Anna Pochinova"}
]
keywords = ["llm", "semantic", "compression", "nlp", "transformer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/uncia-poison/KAiScriptor"
Repository = "https://github.com/uncia-poison/KAiScriptor"
Documentation = "https://github.com/uncia-poison/KAiScriptor/tree/main/docs"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
